# Python-5MHS

./: README.md  file1.txt  file2.txt  file3.txt  wc.py
HW_1/: nl.py  pyproject.toml  tail.py  wc.py
HW_1/artifacts/: HW_1.txt  file1.txt  file2.txt  file3.txt
HW_2/: Dockerfile  build_pdf.py  latex_table.py  pyproject.toml
HW_2/2.1/: main.py
HW_2/2.2/: build_pdf.py  latex_table.py
HW_2/artifacts/: table.tex  Ссылка на библиотеку.txt
HW_3/: pyproject.toml
HW_3/3.1/: main.py  matrix_karavictor.py
HW_3/3.2/: main.py  matrix_karavictor.py
HW_3/artifacts/: matrix_2_add.txt  matrix_2_matmul.txt  matrix_mul.txt
HW_4/: pyproject.toml
HW_4/4.1/: main,py
HW_4/artifacts/: result_1.txt
