[project]
name = "HW_2"
version = "0.1.0"
description = "HW_2 for the Python MSH5"
authors = [
    { name = "kara-victor" }
]

requires-python = "3.11"

dependencies = ["https://test.pypi.org/simple/ latex-generator-karavictor==0.1.1"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
